# johnazariah.github.io

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  build-tags.sh  index.html  rss.xml  tags.markdown
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md  from-saturday-to-coauthor-handoff.md
_data/: navigation.yml
_drafts/: 2026-03-25-julias-child.md  2026-06-10-the-quantum-bottleneck-02-cryptography.md  2026-06-24-the-quantum-bottleneck-03-drug-discovery.md  2026-07-08-the-quantum-bottleneck-04-machine-learning.md  2026-07-22-the-quantum-bottleneck-05-finance.md  2026-08-05-the-quantum-bottleneck-06-supply-chains.md  2026-08-19-the-quantum-bottleneck-07-materials-science.md  2026-09-02-the-quantum-bottleneck-08-climate-energy.md
_includes/: collecttags.html
_layouts/: default.html  home.html  post.html  tagpage.html
_pages/: about.md
_posts/: 2017-12-23-fun-with-trees.md  2018-12-04-tale-of-two-languages.md  2019-12-09-lego-railway tracks-origami-post-1.md  2019-12-09-lego-railway tracks-origami-post-2.md  2019-12-09-lego-railway tracks-origami-post-3.md  2019-12-09-lego-railway tracks-origami-post-4.md  2019-12-09-lego-railway tracks-origami-post-5.md  (+53 more)
code/intent-vs-process/haskell/: intent-vs-process.cabal
code/intent-vs-process/haskell/src/IntentVsProcess/: Domain.hs  Free.hs  TaglessFinal.hs  Traditional.hs
code/intent-vs-process/haskell/src/IntentVsProcess/Free/: Interpreter.hs  Optimizer.hs  Saga.hs  Structure.hs
code/intent-vs-process/haskell/test/: FreeMonadTest.hs  Main.hs  MonadLawTest.hs  OptimizerTest.hs  TaglessFinalTest.hs
(+179 files in other folders)
